welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i <- 0 to long-1) {
  ^Array1:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return motif
  ^